--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -31,6 +31,7 @@ cs:
             index: 'Správa stránek'
         gallery:
             new: 'Nová galerie'
+            new_for_article: 'Vytvořit galerii'
             edit: 'Editace galerie'
         comment:
             edit: 'Editace komentáře'
