--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -5,6 +5,10 @@ cs:
         younger15: 'Mladší 15 let'
         younger18: 'Mladší 18 let'
         adults: 'Dospělí'
+        "0": Nečlen
+        "1": Člen
+        "2": Výbor
+        "3": Admin
     btn:
         show: 'Zobrazit'
         save: 'Uložit'
@@ -14,7 +18,6 @@ cs:
         logout: 'Odhlásit'
         edit_profile: 'Upravit profil'
         register: 'Registrovat'
-
     label:
         actions: 'Možnosti'
         created_at: 'Vytvořeno'
