--- a/config/locales/models/article/cs.yml
+++ b/config/locales/models/article/cs.yml
@@ -10,6 +10,7 @@ cs:
         commentable: Komentáře
         group: Viditelnost
         sticky: Hlavní článek
+        approved: Schváleno
 
   flash:
     article:
