pridani zodpovedne osoby k udalosti.

--- a/config/locales/models/events/cs.yml
+++ b/config/locales/models/events/cs.yml
@@ -18,3 +18,5 @@ cs:
         link: Odkaz
         public: Veřejná
         group: Viditelnost
+        default_hours_of_work: Odhadovaný počet hodin
+        responsible_person: Odpovědná osoba
